베타 버전 구현

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <canvas id='board'>
+    <canvas id='board' tabindex="500">
 
     </canvas>
+    <button id="start">
+        시작
+    </button>
 </body>
 <script src="dist/index.js"></script>
 
